<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_info"
        android:title="@string/info"
        android:icon="@drawable/ic_baseline_info_24"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_exit"
        android:title="@string/exit"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        app:showAsAction="always"/>


</menu>